# MySoftwareRenderPipe

./: .gitignore
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Transform.cpp  Transform.h  ViewPoint.h  buffer.h  camera.h  color.h  fps_counter.cpp  fps_counter.h  light.h  light_with_shadow.cpp  light_with_shadow.h  model.h  rasterization.h  renderer.cpp  renderer.h  scene_obj.h  shader.h  texture.h  transform.cpp  transform.h
src/core/materials/: material.h  material_lambert.cpp  material_lambert.h  material_texture.cpp  material_texture.h  material_with_depth.cpp  material_with_depth.h
src/math/: CMakeLists.txt  Matrix.h  Rotation.h  Vector.h  barycentric_coordinates.h  matrix.h  mvector.h  renderer_math.h  rm_type_names.h  rotation.h  utility.h
test/: CMakeLists.txt
test/test00_window/: CMakeLists.txt  main.cpp
test/test01_draw_point/: CMakeLists.txt  main.cpp
test/test02_linear_algebra/: CMakeLists.txt  test_matrix.cpp  test_rotation.cpp  test_vec2euler.cpp  test_vector.cpp
test/test03_vertexTransform/: CMakeLists.txt  main.cpp  test_get_eye_field.cpp  test_transform.cpp
test/test04_rasterization/: CMakeLists.txt  test_rasterize_line.cpp  test_rasterize_point.cpp  test_rasterize_triangle.cpp
test/test05_barycentric_coordinates/: CMakeLists.txt  test_barycentric_coordinates.cpp  test_barycentric_coordinates2.cpp
test/test06_clip/: CMakeLists.txt  test_backfack_clipping.cpp
test/test07_test_obj_loader/: CMakeLists.txt  test_loader.cpp
test/test08_opencv/: CMakeLists.txt  test_opencv.cpp  test_texture.cpp
test/test09_pipeline/: CMakeLists.txt  test_simple_scene.cpp
test/test10_depthTest/: CMakeLists.txt  test_depthtest.cpp
test/test11_object_texture/: CMakeLists.txt  test_object_texture.cpp
test/test12_lambert/: CMakeLists.txt  test_lambert.cpp
test/test13_orthogonal_projection/: CMakeLists.txt  test_orthogonal_projection.cpp
test/test14_fpsCounter/: CMakeLists.txt  test_fpsCounter.cpp
test/test14_test_fpsCounter/: test_fpsCounter.cpp
test/test15_triangle_culling/: CMakeLists.txt  test_triangle_culling.cpp
test/test16_shadow_map/: CMakeLists.txt  test_shadow_map.cpp
