add_subdirectory(test00_window)
add_subdirectory(test01_draw_point)
add_subdirectory(test02_linear_algebra)
add_subdirectory(test03_vertexTransform)
add_subdirectory(test04_rasterization)
add_subdirectory(test05_barycentric_coordinates)
add_subdirectory(test06_clip)
add_subdirectory(test07_test_obj_loader)
add_subdirectory(test08_opencv)
add_subdirectory(test09_pipeline)
add_subdirectory(test10_depthTest)
add_subdirectory(test11_object_texture)
add_subdirectory(test12_lambert)
add_subdirectory(test13_orthogonal_projection)
add_subdirectory(test14_fpsCounter)
add_subdirectory(test15_triangle_culling)
